edition = "2023";

package openhdc.workload.v1;

import "api/property/v1/property.proto";
import "google/protobuf/struct.proto";
import "google/protobuf/go_features.proto";

option features.(pb.go).api_level = API_OPAQUE;
option go_package = "github.com/openhdc/openhdc/api/workload/v1;workload";

message Metadata {
  string name = 1;
  string version = 2;
  string path = 3;
}

message Internal {
  string file_path = 1;
}

message Sync {
  message Option {
    string key = 1;
    openhdc.property.v1.SyncMode mode = 2;
    string cursor = 3;
  }
  repeated string keys = 1;
  repeated string skip_keys = 2;
  repeated Option options = 3;
}

message Workload {
  openhdc.property.v1.WorkloadKind kind = 1;
  Metadata metadata = 2;
  Sync sync = 3;
  google.protobuf.Struct spec = 4;
  Internal internal = 11;
}
